--- a/app/public/style.css
+++ b/app/public/style.css
@@ -13,6 +13,12 @@ p {
     margin: 1rem 0 1rem 0;
 }
 
+#match-img {
+    max-width:100%; 
+    max-height:100%;
+    margin:auto;
+}
+
 footer {
     position: absolute;
     bottom: 0;
